# py-serial-link-layer

./: .gitignore  CMakeLists.txt  DESCRIPTION.md  README.md  desc_implementacao.txt  msg.txt  receiver.cpp  receiver.py  sender.cpp  sender.py
model/: connection_params.py  packet.py  packet_type.py
old/: sender.py
